# HPC_Tips

./: .gitignore  HPCTips_db.conf  Makefile  Makefile.in  README  README.md  README.new  aclocal.m4  approved.tips  approved_tips.txt  atips.txt  build.rtm  conf_create.py  configure  configure.ac  cron_job  future.tips  load_tips.py  new_load_tips.py  old_load_tips.py  proposed_tips.txt  show_tip
contrib/TACC/: tacc_tips.spec
ex/: connect1  fill1
init/: z99_HPC_Tips.csh  z99_HPC_Tips.sh
modulefile/: HPC_Tips.lua
old/: showTip.C
prepared_stmts/: Makefile  load_db.C
src/: Makefile  Makefile.in  config.h.in  header.h.in  showTip.C  showTip.c  version.h  wordwrap.c
tips/: general.tips  tacc.tips
